# post_google_index

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  age.csv  main.py  pyproject.toml  test_csv_manager.py  test_indexing.py  test_real_indexing.py  test_sitemap.py  test_sitemap_to_csv.py
.serena/: project.yml
docs/: development-plan.md  wordpress.md
src/: config.py  csv_manager.py  indexing.py  logger.py  sitemap.py
